--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import this"
+    "import pandas as pd\n",
+    "pd.read_csv('iris.csv')"
    ]
   },
   {
@@ -43,23 +44,23 @@
   }
  ],
  "metadata": {
-    "kernelspec": {
-     "display_name": "xeus-python",
-     "language": "python",
-     "name": "xeus-python"
-    },
-    "language_info": {
-     "codemirror_mode": {
-      "name": "ipython",
-      "version": 3
-     },
-     "file_extension": ".py",
-     "mimetype": "text/x-python",
-     "name": "python",
-     "nbconvert_exporter": "python",
-     "pygments_lexer": "ipython3",
-     "version": "3.10.4"
-   }
+  "kernelspec": {
+   "display_name": "xeus-python",
+   "language": "python",
+   "name": "xeus-python"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
